# team

./: .gitignore  .zenodo.json  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-latest.yml  docs-release.yml
.ipython/: .directory
.ipython/profile_docs/startup/: startup.py
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/: index.html
0.1.0/examples/: index.html
0.1.0/examples/green-lcoh/: green-lcoh.ipynb  index.html
0.1.0/guide/overview/: index.html
docs/: .nav.yml  index.md
docs/api/: index.md
docs/examples/: green-lcoh.py  index.md
docs/guide/: overview.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api/: index.html
latest/examples/: index.html
latest/examples/green-lcoh/: green-lcoh.ipynb  index.html
latest/guide/overview/: index.html
latest/search/: search_index.json
team/: __init__.py  _accessor.py  accessor.py  manipulations.py
team/tools/: __init__.py  _emi.py  _fscp.py  _lcox.py  _process_chain.py  emi.py  fscp.py  lcox.py  process_chain.py
tests/: __init__.py  debug.pkl  test_accessor.py
