[project]
name = "team"
version = "0.1.0"
description = "Framework for Techno-economic Assessments and Manipulations (TEAM)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pint-pandas>=0.6.2",
    "cet-units",
]

[project.optional-dependencies]
igraph = [
    "igraph>=1.0.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.5",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.5",
    "mip>=1.15.0",
    "pandas-stubs~=2.3.3",
    "plotly>=6.2.0",
    "posted",
    "ruff>=0.14.10",
]
docs = [
    "itables>=2.6.2",
    "jupyterlab>=4.5.0",
    "jupytext>=1.18.1",
    "markdown-exec>=1.12.1",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "plotly>=6.5.0",
]

[tool.uv.sources]
cet-units = { git = "https://github.com/PhilippVerpoort/cet-units.git", rev = "main" }
posted = { git = "https://github.com/PhilippVerpoort/posted.git" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["team*"]

[tool.setuptools.package-data]
"team" = ["database/**"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
